[package]
name = "basket_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["mobile"] }
rodio = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.5"